--- a/.gitignore
+++ b/.gitignore
@@ -100,7 +100,8 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
-
+MANIFEST.MF
+pom.properties
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
